--- a/Bibliotheque-back/src/main/resources/sgbd.properties
+++ b/Bibliotheque-back/src/main/resources/sgbd.properties
@@ -1,6 +1,6 @@
 # parametres configuration bdd bibliotheque
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/quest_jpa
+db.url=jdbc:mysql://localhost:3306/bibliotheque
 db.username=root
 db.password=
 db.maxConnection=10
