Controleur livre + Genre

--- a/Bibliotheque-back/src/main/resources/application.properties
+++ b/Bibliotheque-back/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Informations de connexion
-spring.datasource.url=jdbc:mysql://localhost:3306/bibliotheque_test
+spring.datasource.url=jdbc:mysql://localhost:3306/bibliotheque
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -10,4 +10,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # Port de démarrage de notre serveur Tomcat Embarqué
-# server.port=9999
+ server.port=9999
+
+ 
+# Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+ 
