--- a/Bibliotheque-back/src/main/resources/application.properties
+++ b/Bibliotheque-back/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Informations de connexion
-spring.datasource.url=jdbc:mysql://localhost:3306/bibliotheque_test
+spring.datasource.url=jdbc:mysql://localhost:3306/bibliotheque
 spring.datasource.username=root
 spring.datasource.password=
 
